test/spec/i64.load64_u.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/i64.load64_u.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
third_party/testsuite/i64.load64_u.fail.wast:1:52: unexpected token "i64.load64_u"
(module (memory 1) (func (param i32) (result i64) (i64.load64_u (get_local 0))))
                                                   ^^^^^^^^^^^^
third_party/testsuite/i64.load64_u.fail.wast:1:65: syntax error, unexpected (
(module (memory 1) (func (param i32) (result i64) (i64.load64_u (get_local 0))))
                                                                ^

;;; STDERR ;;)
